# drm-language-emitter

./: .gitignore  ARCHITECTURE.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  LICENCE-COMMERCIAL.md  LICENSE  MODEL_CARD.md  PRIOR_ART.md  README.md  pyproject.toml  roadmap.md
configs/: drm_125m.yaml  drm_125m_4090.yaml  drm_350m.yaml  drm_500m.yaml  fixed_dim_ablation.yaml  tiny.yaml  tiny_104k.yaml  tiny_drm_stronger.yaml  tiny_drm_topk_gates.yaml  tiny_gate_sparse.yaml  tiny_risk.yaml  world_model_stronger.yaml  world_model_tiny.yaml
data/: tiny.txt  wikipedia_en_20231101_sample.txt.metadata.json
docs/: TECHNICAL_QA.md  api.md  competition.md  compliance_checklist.md  conf.py  experiments.md  index.rst  limitations.md  math.md  scale_lm_comparison.md  third_party_licenses.md  world_model_competition.md
scripts/: chat_drm_125m_4090.ps1  chat_drm_125m_4090_base.py  chat_drm_125m_real.py  chat_gpt2_125m_4090.ps1  chat_gpt2_125m_4090_base.py  chat_gpt2_125m_real.py  compare_drm_transformer.py  eval_ablations.py  eval_bridge_task.py  eval_geodesic_paths.py  eval_geometry.py  eval_robustness.py  eval_sequence_stability.py  generate.py  make_competition_dashboard.py  make_tiny_world_dataset.py  make_world_model_dashboard.py  prepare_wikipedia_en.py  prepare_wikipedia_en_125m_real.ps1  prepare_wikipedia_en_5b.ps1  profile_drm.py  run_drm_125m_4090_base.ps1  run_drm_500m_5b.ps1  run_full_trainings.py  run_gpt2_125m_4090_base.ps1  run_scale_lm_comparison.py  run_wiki_en_125m_matched.ps1  run_wiki_en_125m_real_matched.ps1  summarize_competition.py  summarize_runs.py  sweep_drm_transformer.py  train_tiny.py  (+6 more)
(+89 files in other folders)
