[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drm-language-emitter"
version = "0.1.0"
description = "Experimental non-Transformer language model driven by Directional Relational Manifold dynamics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "DRM Language Emitter contributors" }]
dependencies = [
  "torch>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pyyaml>=6.0"]
yaml = ["pyyaml>=6.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
